# python-project-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/workflows/: changelog.yml  ci.yml  docs.yml  pre-commit.yml  release.yml  test.yml
docs/: make.py  robots.txt
docs/pdoc_template/: custom.css  frame.html.jinja2  module.html.jinja2  theme.css
scripts/: pep440_version.py  pip_hashes_md_report.py  pre_commit_md_report.py
test/: conftest.py
